# shippings/shipping.service.js
@@ -1,24 +1,17 @@
 ﻿const config = require('config.json');
-const jwt = require('jsonwebtoken');
-const bcrypt = require('bcryptjs');
-const crypto = require("crypto");
-const sendEmail = require('_helpers/send-email');
-const Role = require('_helpers/role');
 const fetchWrapper = require('_helpers/fetch-wrapper');
 const tenantService = require('tenants/tenants.service');
-
-const shippings = {}
 const dbConfig = require('config.json');
 const { MongoClient } = require("mongodb");
-const ObjectId = require('mongodb').ObjectID;
 const Excel = require('exceljs');
 var claims = [];
-var importedRoutes = [];
+var workbook = new Excel.Workbook();
 
 module.exports = {    
     importRoutes,
     importClaims,    
     update,    
+    getById
 };
 
 async function getById(id) {
@@ -39,8 +32,6 @@ async function update(filter, setData, upsert) {
 }
 
 async function importRoutes() {
-    
-    //console.log('config.tenantId', config.tenantId);
 
     const tenant = await tenantService.getById(config.tenantId);
 
@@ -48,36 +39,20 @@ async function importRoutes() {
         return null;
     }
 
-    //console.log('tenant: ', tenant);
-
     const dataSource = tenant.dataSources.find(ds => ds.entity === "routes");
 
     if (!dataSource) {
         return null;
     }
 
-    //console.log('dataSource: ', dataSource);
-
-    importedRoutes = [];    
-
     const operations = dataSource.operations;
 
-    //console.log('operations: ', operations);
-
-    const url = "https://envios.mercadolivre.com.br/logistics/api/routes?sc=";
+    const url = new URL(dataSource.endpoint + "?sc=", dataSource.protocol + '://' + dataSource.domain).href;
 
     for (const operation of operations) {        
-        
-        //const client = await new MongoClient(dbConfig.connectionString).connect();
-
-        //console.log('url: ', url + operation);
-        
-        const routes = await fetchWrapper.get(url + operation);     
-        
-        console.log('routes: ', routes);
+        const routes = await fetchWrapper.get(url + operation, dataSource.options);     
 
         for (const route of routes) {
-
             route.operation = operation;
 
             const updateDocument = {
@@ -85,88 +60,43 @@ async function importRoutes() {
             };
             
             await update({ id: route.id }, updateDocument, true);
+            
+            const detailsUrl = new URL(dataSource.endpoint, dataSource.protocol + '://' + dataSource.domain).href;
+    
+            const detailsData = await fetchWrapper.get(detailsUrl  + '/' + route.id, dataSource.options);
 
-            importedRoutes.push(route);
-
-            await importRouteDetails(route.id);
-
-            // client.db("vetor-transportes-backend").collection('shippings')
-            // .updateOne(
-            //     { id: route.id }, 
-            //     updateDocument, 
-            //     { upsert: true }, 
-            //     async (err, item) => {
-            //         if (err)
-            //             return console.log('Erro ao inserir/atualizar a colecao shippings na DB: ', err);
-
-            //         if (item)
-            //             importedRoutes.push(route);
-            //             await importRouteDetails(route.id);                
-            //     }
-            // );            
+            await update({ id:  route.id}, { $set: { details: detailsData }}, true);
         }
-    };    
+    };
 
-    //console.log('imported routes: ', importedRoutes);
-
-    return importedRoutes;
-}
-
-async function importRouteDetails(id) {
-    //const client = await new MongoClient(dbConfig.connectionString).connect();
-
-    const url = "https://envios.mercadolivre.com.br/logistics/api/routes/" + id;
-    
-    const detailsData = await fetchWrapper.get(url);
-
-    const route = await getById(id);
-
-    if(route){
-        await update({ id:  id}, { $set: { details: detailsData }});
-    }    
-    
-    // client.db("vetor-transportes-backend").collection('shippings').findOne({ id: id }, async function (err, item) {
-
-    //     if (err)
-    //         return console.log('Erro ao procurar na colecao shippings na DB: ', err);
-
-    //     if (item)
-    //         await update({ id:  id}, { $set: { details: detailsData }});
-    // });        
+    return true;
 }
 
 async function importClaims() {
-    //requiring path and fs modules
     const path = require('path');
     const fs = require('fs');
-    //joining path of directory 
+
     const directoryPath = path.join(__dirname, 'data/claims_logistics');
-    //passsing directoryPath and callback function
-    fs.readdir(directoryPath, async function (err, files) {        
-        //handling error
-        if (err) {
-            return console.log('Unable to scan directory: ' + err);
-        } 
-        //listing all files using for loop
-        for (const file of files) {
-            if (path.extname(file) != ".xlsx")
-                return;
 
-            const filePath = path.join(directoryPath, file);
-            
-            // Do whatever you want to do with the file            
-            await readClaimsFile(filePath);
-        }
-    });  
+    const files = await fs.promises.readdir(directoryPath);
 
-    //console.log('claims: ', claims);
+    for (const file of files) {        
+        if (path.extname(file) != ".xlsx")
+            continue;
+
+        const filePath = path.join(directoryPath, file);
+        
+        await workbook.xlsx.readFile(filePath);
+
+        readClaimsFile(filePath);
+    }
     
-    return claims;
+    await saveClaims(claims);
+    
+    return true;
 }
 
-async function readClaimsFile(filename){
-    const workbook = new Excel.Workbook();
-    await workbook.xlsx.readFile(filename);
+function readClaimsFile(){        
 
     claims = [];
         
@@ -175,8 +105,8 @@ async function readClaimsFile(filename){
         let firstRow = sheet.getRow(1);
         if (!firstRow.cellCount) return;
         let keys = firstRow.values;
-        
-        sheet.eachRow((row, rowNumber) => {
+        //console.log('sheet.rowCount : ', sheet.rowCount);  
+        sheet.eachRow((row, rowNumber) => {            
             if (rowNumber == 1) return;
             
             let values = row.values;
@@ -200,38 +130,11 @@ async function readClaimsFile(filename){
                 claims.push(route);
             }            
         })
-    }
-
-    await saveClaims(claims);
+    }    
 }
 
 async function saveClaims(claims) {    
-    //const client = await new MongoClient(dbConfig.connectionString).connect();
-
-    //await claims.forEach(async function(claim) {
-    for (const claim of claims) {
-        
-        //const route = await client.db("vetor-transportes-backend").collection('shippings').findOne({ id: claim.ROUTE_ID });                
-
-        // if(!route) {            
-        //     const doc = {
-        //         id: claim.ROUTE_ID,
-        //         claims: [{claim}]
-        //       }
-
-        //     await client.db("vetor-transportes-backend").collection('shippings').insertOne(doc);
-        // } else {
-        //     console.log('update route id', claim.ROUTE_ID);            
-            
+    for (const claim of claims) {          
         await update({ id: claim.id }, { $addToSet: { claimsData: claim.claims } }, true);
-            // client.db("vetor-transportes-backend").collection('shippings').updateOne(
-            //     { id: claim.id },
-            //     { $addToSet: { claimsData: claim.claims } },
-            //     { upsert: true },
-            //     async function (err, item) {
-            //         if (err)
-            //             return console.log('Erro ao inserir/atualizar claims na DB: ', err);            
-            // });
-        //}                    
     }
 }
