# swagger.yaml
@@ -655,49 +655,6 @@ paths:
           $ref: "#/components/responses/NotFoundError"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
-  /shippings:
-    get:
-      summary: Get a list of all shippings
-      description: Restricted to admin users.
-      operationId: getAllShippings
-      security:
-        - bearerAuth: []
-      responses:
-        "200":
-          description: An array of all shippings
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                      example: "5eb12e197e06a76ccdefc121"
-                    title:
-                      type: string
-                      example: "Mr"
-                    firstName:
-                      type: string
-                      example: "Jason"
-                    lastName:
-                      type: string
-                      example: "Watmore"
-                    email:
-                      type: string
-                      example: "jason@example.com"
-                    role:
-                      type: string
-                      example: "Admin"
-                    created:
-                      type: string
-                      example: "2020-05-05T09:12:57.848Z"
-                    updated:
-                      type: string
-                      example: "2020-05-08T03:11:21.553Z"
-        "401":
-          $ref: "#/components/responses/UnauthorizedError"
   /jobs/importRoutes:
     post:
       summary: Import routes from MELI Logistics
@@ -718,7 +675,15 @@ paths:
       responses:
         "200":
           description: List of imported claims
-  /tenants:
+  /tenants/{id}:
+    parameters:
+      - in: path
+        name: id
+        description: Tenant id
+        required: true
+        example: "a9614ff1-f7cd-4cea-9386-b629db639065"
+        schema:
+          type: string
     get:
       summary: Get a tenant by id
       description: Get a tenant by id
@@ -768,7 +733,16 @@ paths:
                         example: "envios.mercadolivre.com.br"
                       endpoint:
                         type: string
-                        example: "logistics/api/routes?sc="
+                        example: "logistics/api/routes"
+                      options:
+                        type: object
+                        properties:
+                          headers:
+                            type: object
+                            properties:
+                              cookie:
+                                type: string
+                                example: "_csrf=WJIBJqLtNsW6uBjL8ihkjz7i; ftid=TqDl5dAdJLbApqkdfqs0v6AzLaLSEle5-1651682235500; user_language=pt-BR; _ml_ga=GA1.3.1283391676.1651682348; _ml_ci=1283391676.1651682348; _hjSessionUser_1512977=eyJpZCI6ImYzZGFjNDJiLTNhYTgtNTZmOS04ZmZlLTEwN2M0NjlmNzc4MCIsImNyZWF0ZWQiOjE2NTE2ODIzNDk0MTgsImV4aXN0aW5nIjpmYWxzZX0=; _fbp=fb.2.1651682494529.1869480675; _d2id=46ad2f0a-231c-4f8d-8437-4a05a46d2e91; _gcl_au=1.1.2046071864.1651682516; _uetvid=1c021570cbc911ec83945186896dafbc; __gads=ID=1a04081f837a2993:T=1651682516:S=ALNI_MZsyaV8FOuhkJIm93IzW3XjRj69AA; _ga_NDJFKMJ2PD=GS1.1.1651682515.1.0.1651682522.0; _ga=GA1.3.1367218362.1651682494; _hjSessionUser_783944=eyJpZCI6ImVjZGJhYzRlLTFmMGQtNWE0ZS1iMzkwLTdiOTNjOWY4ZDc1YiIsImNyZWF0ZWQiOjE2NTE2ODI1MDQyMTcsImV4aXN0aW5nIjp0cnVlfQ==; _hjSessionUser_720738=eyJpZCI6IjdkZmYyMWM4LTY4NTktNWQ5Yi1iN2M2LWQzY2YzZjFkNzkzOSIsImNyZWF0ZWQiOjE2NTIzNjA0NDMwMTQsImV4aXN0aW5nIjp0cnVlfQ==; _hjSessionUser_580848=eyJpZCI6ImMxMDk4YjJjLTExMWEtNTk3ZS1iYTdhLWQ3YzhhMjFmNDY2NCIsImNyZWF0ZWQiOjE2NTIzNjA0ODAxNTUsImV4aXN0aW5nIjp0cnVlfQ==; cookiesPreferencesNotLogged=%7B%22categories%22%3A%7B%22advertising%22%3Atrue%7D%7D; _hjSessionUser_492923=eyJpZCI6IjY1NGFjYzNiLWFkNWQtNTY1MC04OTJlLWM5ZDMyMGYyNGQ3YSIsImNyZWF0ZWQiOjE2NTIzNjA5MDQ1MzIsImV4aXN0aW5nIjpmYWxzZX0=; cookiesPreferencesLoggedFallback=%7B%22userId%22%3A669327054%2C%22categories%22%3A%7B%22advertising%22%3Atrue%7D%7D; _hjSessionUser_641080=eyJpZCI6Ijk2YTA4NTc4LTRiZjMtNWUxNS04YjY0LTY2NDI2YTNjMTljNCIsImNyZWF0ZWQiOjE2NTIzNjExNzc1OTYsImV4aXN0aW5nIjp0cnVlfQ==; cp=60335220; ssid=ghy-051710-Aerr4SXhhnTMfGQGtWAQAg5ySlu9ZL-__-536772538-__-1747404488313--RRR_0-RRR_0; orgnickp=SC.BR.ICARVALHO75; orguseridp=669327054; orguserid=7ttH47HZhd9T; user_activity_last_session=3_hours; LOGISTICS_SC=PRGO2"
                       operations:
                         type: array
                         example: ["SMG1", "SMG2", "SMG8", "SMG9", "SDF1", "SMS1", "SMR1", "SES1", "SGO1"]
